--- a/main_page.html
+++ b/main_page.html
@@ -3,11 +3,15 @@
     <p id='server-time'></p>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io();
-      var el = document.getElementById('server-time');
-      socket.on('time', function(timeString) {
-        el.innerHTML = 'Server time: ' + timeString;
-      });
-    </script>
+ 	 var socket = io();
+  	$('form').submit(function(){
+   	 socket.emit('chat message', $('#m').val());
+   	 $('#m').val('');
+   	 return false;
+  	});
+  	socket.on('chat message', function(msg){
+    	$('#messages').append($('<li>').text(msg));
+  });
+</script>
   </body>
 </html>
