--- a/main_page.html
+++ b/main_page.html
@@ -82,7 +82,7 @@
 				<option value="channel-a">Channel A</option>
 				<option value="channel-b">Channel B</option>
 			</select>
-			<input type="text" id="msj" placeholder="(:">
+			<input type="text" id="msj" placeholder="Message">
 			<input type="submit" id="btn" value="Submit">
 		</form>
 	</div>
