--- a/client.html
+++ b/client.html
@@ -4,10 +4,9 @@
     	<title>Chat Demo</title>
     	<link type="text/css" rel="stylesheet" href="client_style.css"/>
     </head>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>	
-
-    <div id = chatform>
     <script>
 		var socket = io();
 		var el = document.getElementById('server-time');
@@ -81,8 +80,8 @@
 		}
 
     </script>
-    </div>
     <body>
+    <h1 class = "text"> THE LEMON LAW - REPLACE ME </h1>
         <div id="error-container" ></div>
 		<div style="text-align:center">
 		<ul style="list-style-type: none;" >
