--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewpoint" content="width=device-width, initial-scale=1">
   <title>Contact Us</title>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" type="text/css" href="contact_style.css"/>
   <script src="https://use.fontawesome.com/bb1de359ad.js"></script>
 </head>
 <body>
 <section>
   <div class="matthew">
+    <h2>Matthew Chung</h2>
     <ul>
       <li></li>
       <li></li>
@@ -18,6 +19,7 @@
   </div>
 
   <div class="peter">
+    <h2>Peter Li</h2>
     <ul>
       <li></li>
       <li></li>
@@ -26,6 +28,7 @@
   </div>
 
   <div class="alvin">
+    <h2>Alvin Wong</h2>
     <ul>
       <li></li>
       <li></li>
