--- a/main_page.html
+++ b/main_page.html
@@ -26,7 +26,9 @@ function visitContact(){
 
 <section class="body">
   <div class="start-button">
+  <a href="/create">
     <button id="start-button-style" type="button" onclick="Hello">Start Chatting</button>
+  </a>
   </div>
 </section>
 
