--- a/client.html
+++ b/client.html
@@ -81,7 +81,7 @@
 
     </script>
     <body>
-    <h1 class = "text"> THE LEMON LAW - REPLACE ME </h1>
+    <h1 class = "text"> THE LEMON LAW </h1>
         <div id="error-container" ></div>
 		<div style="text-align:center">
 		<ul style="list-style-type: none;" >
