change some styling

--- a/client.html
+++ b/client.html
@@ -89,10 +89,10 @@
 		<div style="text-align:center">
 		<ul style="list-style-type: none;" >
 			<li><input  class="usernameInput" id="name" type="text" name="name" value="" maxlength="14" placeholder="Enter your Name!" ></li>
-			<li><input id="age" type="text" name="age" value="" placeholder="Enter your Age!" ></li>
-			<li><input id="gender" type="text" name="gender" value="" placeholder="Enter your Gender!" ></li>
+			<li><input class="ageInput" id="age" type="text" name="age" value="" maxlength="2" placeholder="Age" ></li>
+			<li><input  class="usernameInput" id="gender" type="text" name="gender" value="" maxlength="6" placeholder="Enter your Gender!" ></li>
 		</ul>
-        <button type="button" name="button" onclick="setUser()">Start chatting!</button>
+        <button  class="myButton" type="button" name="button" onclick="setUser()">Start chatting!</button>
 		</div>
 		<script type="text/javascript" src="/public/chat.js"></script>
 		
