contact page styling done

--- a/contact.html
+++ b/contact.html
@@ -8,31 +8,41 @@
   <script src="https://use.fontawesome.com/bb1de359ad.js"></script>
 </head>
 <body>
+
+  <div class="home">
+    <h2><a href="main_page.html"><i class="fa fa-home" ></i></a></h2>
+  </div>
+
+  
+
 <section>
   <div class="matthew">
-    <h2>Matthew Chung</h2>
+    <div class="mh">
+    <h2>MC</h2>
+   </div>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><i class="fa fa-envelope"></i>Email: m33chung@uwaterloo.ca</li>
+      <li><i class="fa fa-phone"></i> Cell: 437-777-2340</li>
     </ul>
   </div>
 
   <div class="peter">
-    <h2>Peter Li</h2>
+    <div class="ph">
+    <h2>PL</h2>
+  </div>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><i class="fa fa-envelope"></i>Email: z638li@uwaterloo.ca</li>
+      <li><i class="fa fa-phone"></i> Cell: 289-400-5224</li>
     </ul>
   </div>
 
   <div class="alvin">
-    <h2>Alvin Wong</h2>
+    <div class="ah">
+    <h2>AW</h2>
+    </div>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><i class="fa fa-envelope"></i>Email: z638li@uwaterloo.ca</li>
+      <li><i class="fa fa-phone"></i> Cell: 289-400-5224</li>
     </ul>
   </div>
 </section>
