small resolution fixes

--- a/about.html
+++ b/about.html
@@ -16,29 +16,12 @@
     <h1>The Team</h1>
   </div>
 
-<section id="matthew">
-  <div class="mh">
-    <h1>Matthew Chung</h1>
-  </div>
-  <div class="mp">
+<section>
+  <div class="p">
+    <p>We are a group of 3 students from the ECE department at the University of Waterloo. We decided to create this app based off of Barney Stinson's Lemon Law in the tv show : "How I met your Mother" More information can be found on our github link.</p>
   </div>
 </section>
 
-<section id="peter">
-  <div class="ph">
-    <h1>Peter Li</h1>
-  </div>
-  <div class="pp">
-  </div>
-</section>
-
-<section id="alvin">
-  <div class="ah">
-    <h1>Alvin Wong</h1>
-  </div>
-  <div class="ap">
-  </div>
-</section>
 
 </body>
 </html>
