small resolution fixes

--- a/about.html
+++ b/about.html
@@ -18,9 +18,14 @@
 
 <section>
   <div class="p">
-    <p>We are a group of 3 students from the ECE department at the University of Waterloo. We decided to create this app based off of Barney Stinson's Lemon Law in the tv show : "How I met your Mother" More information can be found on our github link.</p>
+    <p>We are a group of 3 students from the ECE department at the University of Waterloo. We decided to create this app based off of Barney Stinson's Lemon Law in the tv show : "How I met your Mother" More information can be found on our github link. https://github.com/IM-MC/TheLemonLaw</p>
   </div>
+
+  <div class="logo">
+  		<img src="TheLemonLaw.png"/>
+	</div>
 </section>
+
 
 
 </body>
