small resolution fixes

--- a/client.html
+++ b/client.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<title>Chat Demo</title>
+    	<title>TheLemonLaw</title>
     	<link type="text/css" rel="stylesheet" href="client_style.css"/>
       <script src="https://use.fontawesome.com/bb1de359ad.js"></script>
     </head>
