small resolution fixes

--- a/client.html
+++ b/client.html
@@ -3,6 +3,7 @@
     <head>
     	<title>TheLemonLaw</title>
     	<link type="text/css" rel="stylesheet" href="client_style.css"/>
+      <link rel="icon" type="image/png" href="icon.png" sizes="65x65"/>
       <script src="https://use.fontawesome.com/bb1de359ad.js"></script>
     </head>
 
