--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta name="viewpoint" content="width=device-width, initial-scale=1">
   <title>About Us</title>
   <link rel="stylesheet" type="text/css" href="about_style.css"/>
+  <link rel="icon" type="image/png" href="icon.png" sizes="65x65"/>
   <script src="https://use.fontawesome.com/bb1de359ad.js"></script>
 </head>
 <body>
