--- a/main_page.html
+++ b/main_page.html
@@ -6,7 +6,7 @@
 <meta name="viewpoint" content="width=device-width, initial-scale=1">
 <title>TheLemonLaw</title>
 <link rel="stylesheet" type="text/css" href="main_style.css"/>
-
+<link rel="icon" type="image/png" href="icon.png" sizes="65x65"/>
 <script>
 function visitAbout(){
         window.location='about.html';
