--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,8 @@
     <h2>AW</h2>
     </div>
     <ul>
-      <li><i class="fa fa-envelope"></i>Email: z638li@uwaterloo.ca</li>
-      <li><i class="fa fa-phone"></i> Cell: 289-400-5224</li>
+      <li><i class="fa fa-envelope"></i>Email: tfwong@uwaterloo.ca</li>
+      <li><i class="fa fa-phone"></i> Cell: 647-988-8346</li>
     </ul>
   </div>
 </section>
